Colaboratory kullanılarak oluşturuldu

--- a/assignment_password_reminder.ipynb
+++ b/assignment_password_reminder.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "assignment_password_reminder.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOXMovwUcZ1khk/BHKMUHeS",
+      "authorship_tag": "ABX9TyNTw79Q7PKu1AcZ8feR4bIL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "id": "J0O-LvsqZ2iI"
       },
       "source": [
-        "asdfg"
+        "asdfg c nbc"
       ],
       "execution_count": null,
       "outputs": []
